--- a/responsive_page/_css/patterns.css
+++ b/responsive_page/_css/patterns.css
@@ -8,9 +8,7 @@
 }
 .meta {
     color:#666;
-    font-family:'Proxima Nova Regular',sans-serif;
-    font-size:0.75em; /* 12px */
-    line-height:1.3334em /* 16px */
+    font:normal 0.75em/1.3334 'Proxima Nova Regular',sans-serif; /* 12px/16px */
     letter-spacing:0.0833em;
     text-transform:uppercase;
     }
@@ -19,6 +17,75 @@
     }
 .meta a {
     color:#666;
+}
+
+
+/* ============================================================
+    Location header
+============================================================ */
+@media screen and (min-width:35em) {
+    .mile {
+        font-size:1em;
+        background:url('_assets/sprite.png') no-repeat 0 -4em;
+        margin:0;
+        padding:0.375em 0;
+        width:3.5em;
+        height:2.75em;
+        display:block;
+        }
+        .svg .mile {
+            background-image:url('_assets/sprite.svg');
+        }
+    .mile .unit {
+        color:#2c1c16;
+        font-size:0.625em; /* 10px */
+        line-height:1.6em; /* 16px */
+        letter-spacing:0.1em;
+        text-align:center;
+        display:block;
+    }
+    .mile .value {
+        color:#f93;
+        font:bold 0.875em/1.2857 'Proxima Nova Bold',sans-serif; /* 14px/18px */
+        text-align:center;
+        display:block;
+    }
+    .location {
+        position:relative;
+        margin-bottom:1.5em;
+    }
+    .location .title {
+        margin-left:1.75em;
+    }
+    .location .mile {
+        position:absolute;
+        top:0;
+        left:0;
+    }
+}
+
+
+/* ============================================================
+    Day header
+============================================================ */
+@media screen and (min-width:35em) {
+    .day {
+        margin-bottom:1.5em;
+        overflow:hidden;
+    }
+    .day h1 {
+        white-space:nowrap;
+        float:left;
+    }
+    .day .meta {
+        color:#2c1c16;
+        font-size:0.875em; /* 14px */
+        line-height:1.1429em; /* 16px */
+        letter-spacing:0.125em; /* 2px */
+        opacity:0.8;
+        margin:3.25em 0 0 1em; /* 52px 0 0 16px */
+        float:left;
+    }
 }
 
 
@@ -93,6 +160,46 @@
 .items li.item-next a {
     padding-right:0;
 }
+@media screen and (min-width:64em) {
+    .items {
+        position:absolute;
+        width:95%;
+        margin:0 -2.5%;
+        top:26em;
+    }
+    .items li {
+        padding:0;
+        left:0;
+    }
+    .items li a {
+        font-size:1em;
+        text-indent:-999em;
+        background:url('_assets/sprite.png') no-repeat 0 -8em;
+        padding:0;
+        display:block;
+        height:4em;
+        width:4em;
+        opacity:0.2;
+        }
+        .svg .items li a {
+            background-image:url('_assets/sprite.svg');
+        }
+    .items li a:hover {
+        opacity:0.4;
+    }
+    .items li.item-next {
+        right:0;
+    }
+    .items li.item-next a {
+        background-position:0 -12em;
+    }
+}
+@media screen
+and (max-height:40em) {
+    .items {
+        top:17em;
+    }
+}
 
 
 /* ============================================================
@@ -129,7 +236,7 @@
     Links
 ============================================================ */
 .link {
-    list-style-image: url(_assets/bullet-star.png);
+    list-style-image:url(_assets/bullet-star.png);
 }
 
 
@@ -146,9 +253,32 @@
     padding:1em 5%; /* 16px 16/320 */
     margin:0 -5.555555555556%; /* 0 16/288 */
 }
-.media-frame .media-object {
+img.media-object,
+.media-object-wrapper {
     margin:0 auto;
-    display:block;
+    width:100%;
+    max-width:50em; /* 800px */
+}
+.media-object-wrapper {
+    padding-bottom:56.25%;
+    height:0;
+    position:relative;
+    }
+    .media-object-wrapper iframe.media-object {
+        width:100%;
+        height:100%;
+        position:absolute;
+    }
+@media screen and (min-width:55em) { /* 880px */
+    .media-object-wrapper {
+        padding-bottom:28.125em; /* 450px */
+    }
+}
+@media screen and (max-height:35em) and (orientation:landscape) { /* 560px */
+    .media-object-wrapper {
+        width:60%;
+        padding-bottom:33.75%;
+    }
 }
 
 
@@ -200,11 +330,43 @@
     .media-item a:hover {
         border:0 none;
     }
+@media screen and (min-width:35em) {
+    .media-item {
+        width:30.612244897959%; /* 240/784 */
+        margin:0 4.081632653061% 4.081632653061% 0; /* 0 32/784 32/784 0 */
+        }
+        .media-item:nth-child(2n) {
+            margin-right:4.081632653061%;
+        }
+        .media-item:nth-child(3n) {
+            margin-right:0;
+        }
+        .media-item h2.title {
+            font-size:1em;
+            padding:0 0.5em; /* 0 8px */
+        }
+        .media-item time {
+            font-weight:normal;
+            margin-left:0.75em; /* 8px */
+        }
+}
+@media screen and (min-width:73.5em) {
+    .media-item {
+        width:21.938775510204%; /* 172/784 */
+        }
+        .media-item:nth-child(2n),
+        .media-item:nth-child(3n) {
+            margin-right:4.081632653061%;
+        }
+        .media-item:nth-child(4n) {
+            margin-right:0;
+        }
+}
 
 
 /* ============================================================
     Map
 ============================================================ */
-.map {
+img.map {
     outline:2px solid #bcb3a6;
 }
